--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "0.18.0",
     "font-awesome": "4.7.0",
+    "lodash": "^4.17.11",
+    "polished": "^3.2.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dimensions": "^1.3.1",
